Fixed problem where weekday would go out of bounds of 0-indexed array of days.

--- a/TweetPrediction/styles/landing-page.css
+++ b/TweetPrediction/styles/landing-page.css
@@ -20,8 +20,8 @@ h6 {
 }
 
 .intro-header {
-    padding-top: 20px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: 20px;
+    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+    padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
     background: url(../media/pics/intro-bg.jpg) no-repeat center center;
